--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
     <link rel="stylesheet" href="Styles1.css">
     <style>
         body{
-            background-image: linear-gradient(to right, red,orange,yellow,green,blue,indigo,violet);
+             background: rgb(34,193,195);
+             background: radial-gradient(circle, rgba(34,193,195,1) 0%, rgba(98,36,52,0.8911939775910365) 100%);
         }
         fieldset{
             width: 450px;
